namespace GameEnums
{
    public enum CollectableItems
    {
        Coin,
        Box,
        RedPotion,
        GreenPotion,
        BluePotion,
        Key
    }

    public enum Difficulty
    {
        NONE,
        EASY,
        MEDIUM,
        HARD,
        EXTREME
    }

    public enum Messages
    {
        GameOver
    }

}
